styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.w-ctm{
  width:0rem;
  text-align: center;
}
.p-ctm{
  padding: 1.25rem;
}

.md:-ml-20{
  margin-left: -4.8rem;
}

.container-ctm{
  @apply p-5;
  @apply max-w-4xl;
  @apply mx-auto;
  @apply font-sans;
  @apply text-gray-700;
}

.article-section p{
  
  @apply mb-5;
  @apply text-lg;
}

.article-section a{
  @apply text-blue-600;
}

.article-section figure{
  @apply mt-10;
  @apply mb-10;
}

.article-section h2{
  @apply text-4xl;
  @apply font-bold;
  @apply leading-loose;
}

.article-section ul,
.article-section ol{
  @apply px-5;
  @apply py-2;
  @apply leading-8;
  font-size:1.1rem;
  @apply mb-5;
}


.article-section ol{
  @apply list-decimal;
}

.article-section li{
  @apply list-disc;
}


.article-section blockquote{
  font-style: italic;
  font-size:1.1rem;
}

.article-section pre{
  @apply font-mono;
  @apply bg-gray-100;
  @apply p-4;
  @apply my-4;
  @apply border;
}



/*
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}*/

